infrastructure/controllers/overlays/k3d-dev/traefik/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-local-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
